--- a/TalismanSqlForum/Views/Shared/_Layout.cshtml
+++ b/TalismanSqlForum/Views/Shared/_Layout.cshtml
@@ -70,7 +70,7 @@
                     <a class="element bg-transparent fg-dark image-button image-left" href="http://talisman-sql.ru/#i201">
                         <em>Талисман, 2014</em>
                     </a>
-                    <a class="element place-right bg-transparent fg-dark image-button image-left" href="@Url.Action("Rules","Information")">
+                    <a class="element place-right bg-transparent fg-dark image-button image-left" href="@Url.Action("Rules","Rules")">
                         <em>Правила форума</em>
                     </a>
                 </div>
