--- a/TalismanSqlForum/Views/Shared/_LayoutAdmi.cshtml
+++ b/TalismanSqlForum/Views/Shared/_LayoutAdmi.cshtml
@@ -48,6 +48,12 @@
                             список форумов
                         </a>
                     </li>
+                    <li>
+                        <a href="@Url.Action("Edit","Rules")">
+                            <i class="icon-list"></i>
+                            Правила
+                        </a>
+                    </li>
                 </ul>
             </nav>
         </div>
