--- a/TalismanSqlForum/Views/ForumThemes/Index.cshtml
+++ b/TalismanSqlForum/Views/ForumThemes/Index.cshtml
@@ -170,3 +170,8 @@
         </div>
     </div>
 </div>
+<div class="row" style="bottom:20px">
+    <div class="container">
+        @Html.Partial("_Stat")
+    </div>
+</div>
