--- a/TalismanSqlForum/Views/ForumThemes/_Stat.cshtml
+++ b/TalismanSqlForum/Views/ForumThemes/_Stat.cshtml
@@ -4,24 +4,25 @@
     </div>
     <div class="panel-content bg-white" style="padding:10px;">
         @{
-            var t = TalismanSqlForum.Code.Stat.Stat_Forum();
+            var t = TalismanSqlForum.Code.Stat.Stat_ForumList((int)ViewData["tForumList_id"]);
             <div class="row">
                 <div class="place-left">
-                    <p>Всего разделов: @t.count_list</p>
+                    <p>Всего тем: @t.count_ForumThemes</p>
                     <p>Открыто тем сегодня: @t.count_NewForumThemes</p>
                     <p>Создано сообщений сегодня: @t.count_NewForumMessages</p>
                     <p>Открыто тем вчера: @t.count_OldForumThemes</p>
                     <p>Создано сообщений вчера: @t.count_OldForumMessages</p>
                     <p>Всего просмотров: @t.count_View</p>
                     <p>Всего пользователей на форуме @t.count_Users</p>
-                    <p>Всего сообщений: @t.count_ForumMessages</p>
-                    <p>Всего тем: @t.count_ForumThemes</p>
-                    <p>наиболее активные участники: @t.mega_User</p>
                 </div>
             </div>
             <div class="row">
                 <i class="icon-mail fg-grayDark"></i> На форуме нет новых сообщений
                 <i class="icon-mail fg-orange"></i> Форум содержит новые сообщения
+            </div>
+            <div class="row">
+                <i class="icon-attachment fg-grayDark"></i> В закрепленной теме нет новых сообщений
+                <i class="icon-attachment fg-orange"></i> Закрепленная тема содержит новые сообщения
             </div>
 
         }
