--- a/TalismanSqlForum/Views/Search/Index.cshtml
+++ b/TalismanSqlForum/Views/Search/Index.cshtml
@@ -8,6 +8,15 @@
             Вы искали - "@ViewData["val"]"
         </h4>
     </div>
+    <div class="panel" data-role="panel">
+        <div class="panel-header">
+            Параметры поиска
+        </div>
+        <div class="panel-content">
+
+        </div>
+    </div>
+    
     <div class="panel-content bg-white">
         <div class="panel" data-role="panel">
             <div class=" panel-header no-border">
