--- a/TalismanSqlForum/Views/Search/tForumMessages.cshtml
+++ b/TalismanSqlForum/Views/Search/tForumMessages.cshtml
@@ -7,8 +7,14 @@
                 <h4 class="list-group-item-heading">
                     @item.tForumThemes.tForumThemes_name
                 </h4>
-                <p class="list-group-item-text">
-                    @Html.Raw(item.tForumMessages_messages)
+                <style>
+                    .search 
+                    {
+                        background-color:yellow;
+                    }
+                </style>
+                <p class="list-group-item-text">                   
+                    @Html.Raw(item.tForumMessages_messages.Replace((string)ViewData["val"],"<em class =\"search\">"+(string)ViewData["val"]+"</em>"))                    
                 </p>
             </div>
         </a>
