--- a/TalismanSqlForum/Views/Shared/_Layout.cshtml
+++ b/TalismanSqlForum/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
             @using (Html.BeginForm("Index", "Search", FormMethod.Post, new { @class = "element input-element bg-transparent no-margin" }))
             {
                 <div class="input-control text bg-transparent" style="width: 270px !important;">
-                    <input id="val" name="val" type="text" placeholder="Поиск..." style="border-radius:7px;">
+                    <input id="_searchVal" name="_searchVal" type="text" placeholder="Поиск..." style="border-radius:7px;">
                     <button class="btn-search"></button>
                 </div>
             }
