--- a/TalismanSqlForum/Views/Account/Register.cshtml
+++ b/TalismanSqlForum/Views/Account/Register.cshtml
@@ -8,7 +8,7 @@
             <h4 class="fg-white">Регистрация</h4>
         </div>
         <div class="row bg-white reg_form" style="margin-top:0;">
-            @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "bg-white" }))
+            @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "bg-white", @style="margin-top:-15px;"}))
             {
                 <div class="margin10">
                     @Html.AntiForgeryToken()
