--- a/TalismanSqlForum/Views/ForumThemes/Index.cshtml
+++ b/TalismanSqlForum/Views/ForumThemes/Index.cshtml
@@ -39,130 +39,130 @@
                     {
                         <div class="listview-outlook">
                             @foreach (var item in tForumThemes_top)
-                        {
-                        <a href="@Url.Action("Index", "ForumMessages", new {id = item.Id})" class="list">
-                            <div class="list-content">
-                                <div class="tile half bg-white">
-                                    <div class="tile-content icon">
-                                        @{
-                            var t = 0;
-                            if (User.Identity.IsAuthenticated)
                             {
-                                t = TalismanSqlForum.Code.Stat.count_mess(username: User.Identity.Name, id: item.Id);
-                            }
-                            if (User.Identity.IsAuthenticated && t > 0)
-                            {
-                                            <i class="icon-attachment fg-orange"></i>
-                            }
-                            else
-                            {
-                                            <i class="icon-attachment fg-gray"></i>
-                            }
-                                        }
-                                    </div>
-                                    <div class="tile-status">
-                                        <span class="name center-block fg-gray">@item.tForumMessages.Count</span>
-                                    </div>
-                                </div>
-                                <h5>
-                                    @if (item.tForumThemes_close)
+                                <a href="@Url.Action("Index", "ForumMessages", new {id = item.Id})" class="list">
+                                    <div class="list-content">
+                                        <div class="tile half bg-white">
+                                            <div class="tile-content icon">
+                                                @{
+                                var t = 0;
+                                if (User.Identity.IsAuthenticated)
+                                {
+                                    t = TalismanSqlForum.Code.Stat.count_mess(username: User.Identity.Name, id: item.Id);
+                                }
+                                if (User.Identity.IsAuthenticated && t > 0)
+                                {
+                                    <i class="icon-attachment fg-orange"></i>
+                                }
+                                else
+                                {
+                                    <i class="icon-attachment fg-gray"></i>
+                                }
+                                                }
+                                            </div>
+                                            <div class="tile-status">
+                                                <span class="name center-block fg-gray">@item.tForumMessages.Count</span>
+                                            </div>
+                                        </div>
+                                        <h5>
+                                            @if (item.tForumThemes_close)
+                                            {
+                                                <span class="icon-locked-2"></span>
+                                            }
+                                            @item.tForumThemes_name
+                                        </h5>
+                                        <hr style="border: 1px hidden;margin-bottom: 1px;">
+                                        <div class="button bg-transparent fg-gray place-left">
+                                            Автор
+                                        </div>
+                                        <div class="button bg-transparent fg-gray place-left">
+                                            <i class="icon-user on-left"></i>
+                                            @item.tUsers.NickName
+                                        </div>
+                                        <div class="button bg-transparent fg-gray  place-left">
+                                            <i class="icon-calendar on-left"></i>
+                                            @item.tForumThemes_datetime
+                                        </div>
+                                        @if (item.tForumMessages.Count > 0)
                                         {
-                                        <span class="icon-locked-2"></span>
-                                        }
-                                    @item.tForumThemes_name
-                                </h5>
-                                <hr style="border: 1px hidden;margin-bottom: 1px;">
-                                <div class="button bg-transparent fg-gray place-left">
-                                    Автор
-                                </div>
-                                <div class="button bg-transparent fg-gray place-left">
-                                    <i class="icon-user on-left"></i>
-                                    @item.tUsers.NickName
-                                </div>
-                                <div class="button bg-transparent fg-gray  place-left">
-                                    <i class="icon-calendar on-left"></i>
-                                    @item.tForumThemes_datetime
-                                </div>
-                                @if (item.tForumMessages.Count > 0)
-                                    {
-                                    <div class="button bg-transparent fg-lightBlue place-right">
-                                        <i class="icon-calendar on-left"></i>
-                                        @item.tForumMessages.OrderByDescending(a => a.tForumMessages_datetime).First().tForumMessages_datetime
-                                    </div>
-                                    <div class="button bg-transparent fg-lightBlue place-right">
-                                        <i class="icon-user on-left"></i>
-                                        @item.tForumMessages.OrderByDescending(a => a.tForumMessages_datetime).First().tUsers.NickName
-                                    </div>
-                                    <div class="button bg-transparent fg-lightBlue place-right">
-                                        Последнее сообщение
-                                    </div>
+                                            <div class="button bg-transparent fg-lightBlue place-right">
+                                                <i class="icon-calendar on-left"></i>
+                                                @item.tForumMessages.OrderByDescending(a => a.tForumMessages_datetime).First().tForumMessages_datetime
+                                            </div>
+                                            <div class="button bg-transparent fg-lightBlue place-right">
+                                                <i class="icon-user on-left"></i>
+                                                @item.tForumMessages.OrderByDescending(a => a.tForumMessages_datetime).First().tUsers.NickName
+                                            </div>
+                                            <div class="button bg-transparent fg-lightBlue place-right">
+                                                Последнее сообщение
+                                            </div>
 
-                                    }
-                            </div>
-                        </a>
-                        }
+                                        }
+                                    </div>
+                                </a>
+                            }
                         </div>
                     }
                     if (tForumThemes.Count() > 0)
                     {
                         <div class="listview-outlook">
                             @foreach (var item in tForumThemes)
-                        {
-                        <a href="@Url.Action("Index", "ForumMessages", new {id = item.Id})" class="list">
-                            <div class="list-content">
-                                <div class="tile half bg-white">
-                                    <div class="tile-content icon">
-                                        @{
-                            var t = 0;
-                            if (User.Identity.IsAuthenticated)
                             {
-                                t = TalismanSqlForum.Code.Stat.count_mess(username: User.Identity.Name, id: item.Id);
-                            }
-                            if (User.Identity.IsAuthenticated && t > 0)
-                            {
-                                            <i class="icon-mail fg-orange"></i>
-                            }
-                            else
-                            {
-                                            <i class="icon-mail fg-gray"></i>
-                            }
+                                <a href="@Url.Action("Index", "ForumMessages", new {id = item.Id})" class="list">
+                                    <div class="list-content">
+                                        <div class="tile half bg-white">
+                                            <div class="tile-content icon">
+                                                @{
+                                var t = 0;
+                                if (User.Identity.IsAuthenticated)
+                                {
+                                    t = TalismanSqlForum.Code.Stat.count_mess(username: User.Identity.Name, id: item.Id);
+                                }
+                                if (User.Identity.IsAuthenticated && t > 0)
+                                {
+                                    <i class="icon-mail fg-orange"></i>
+                                }
+                                else
+                                {
+                                    <i class="icon-mail fg-gray"></i>
+                                }
+                                                }
+                                            </div>
+                                            <div class="tile-status">
+                                                <span class="name center-block fg-gray">@item.tForumMessages.Count</span>
+                                            </div>
+                                        </div>
+
+                                        <h5>@item.tForumThemes_name</h5>
+                                        <hr style="border: 1px hidden;margin-bottom: 1px;">
+                                        <div class="button bg-transparent fg-gray place-left">
+                                            Автор
+                                        </div>
+                                        <div class="button bg-transparent fg-gray place-left">
+                                            <i class="icon-user on-left"></i>
+                                            @item.tUsers.NickName
+                                        </div>
+                                        <div class="button bg-transparent fg-gray  place-left">
+                                            <i class="icon-calendar on-left"></i>
+                                            @item.tForumThemes_datetime
+                                        </div>
+                                        @if (item.tForumMessages.Count > 0)
+                                        {
+                                            <div class="button bg-transparent fg-lightBlue place-right">
+                                                <i class="icon-calendar on-left"></i>
+                                                @item.tForumMessages.OrderByDescending(a => a.tForumMessages_datetime).First().tForumMessages_datetime
+                                            </div>
+                                            <div class="button bg-transparent fg-lightBlue place-right">
+                                                <i class="icon-user on-left"></i>
+                                                @item.tForumMessages.OrderByDescending(a => a.tForumMessages_datetime).First().tUsers.NickName
+                                            </div>
+                                            <div class="button bg-transparent fg-lightBlue place-right">
+                                                Последнее сообщение
+                                            </div>
                                         }
                                     </div>
-                                    <div class="tile-status">
-                                        <span class="name center-block fg-gray">@item.tForumMessages.Count</span>
-                                    </div>
-                                </div>
-
-                                <h5>@item.tForumThemes_name</h5>
-                                <hr style="border: 1px hidden;margin-bottom: 1px;">
-                                <div class="button bg-transparent fg-gray place-left">
-                                    Автор
-                                </div>
-                                <div class="button bg-transparent fg-gray place-left">
-                                    <i class="icon-user on-left"></i>
-                                    @item.tUsers.NickName
-                                </div>
-                                <div class="button bg-transparent fg-gray  place-left">
-                                    <i class="icon-calendar on-left"></i>
-                                    @item.tForumThemes_datetime
-                                </div>
-                                @if (item.tForumMessages.Count > 0)
-                                    {
-                                    <div class="button bg-transparent fg-lightBlue place-right">
-                                        <i class="icon-calendar on-left"></i>
-                                        @item.tForumMessages.OrderByDescending(a => a.tForumMessages_datetime).First().tForumMessages_datetime
-                                    </div>
-                                    <div class="button bg-transparent fg-lightBlue place-right">
-                                        <i class="icon-user on-left"></i>
-                                        @item.tForumMessages.OrderByDescending(a => a.tForumMessages_datetime).First().tUsers.NickName
-                                    </div>
-                                    <div class="button bg-transparent fg-lightBlue place-right">
-                                        Последнее сообщение
-                                    </div>
-                                    }
-                            </div>
-                        </a>
-                        }
+                                </a>
+                            }
                         </div>
                     }
                 }
@@ -170,8 +170,11 @@
         </div>
     </div>
 </div>
-<div class="row" style="bottom:20px">
-    <div class="container">
-        @Html.Partial("_Stat")
+@if (!Request.Browser.IsMobileDevice)
+{
+    <div class="row" style="bottom:20px">
+        <div class="container">
+            @Html.Partial("_Stat")
+        </div>
     </div>
-</div>
+}
