Немного подделок с регистрационными данными

--- a/TalismanSqlForum/Views/Shared/_LoginPartial.cshtml
+++ b/TalismanSqlForum/Views/Shared/_LoginPartial.cshtml
@@ -11,7 +11,7 @@
             </a>
         </li>
         <li style="border-bottom : 1px transparent solid;">
-            <a href="@Url.Action("Manage","Account")" class="gradient_header" style="border-radius: 7px;margin-bottom: 3px;">
+            <a href="@Url.Action("ManageUser","Account")" class="gradient_header" style="border-radius: 7px;margin-bottom: 3px;">
                 <i class="icon-pencil"></i>
                 Профиль(@User.Identity.GetUserName())
             </a>
