--- a/TalismanSqlForum/Views/Search/tForumMessages.cshtml
+++ b/TalismanSqlForum/Views/Search/tForumMessages.cshtml
@@ -14,7 +14,14 @@
                     }
                 </style>
                 <p class="list-group-item-text">                   
-                    @Html.Raw(item.tForumMessages_messages.Replace((string)ViewData["val"],"<em class =\"search\">"+(string)ViewData["val"]+"</em>"))                    
+                    @if ((string)ViewData["val"] != "")
+                    {
+                        @Html.Raw(item.tForumMessages_messages.Replace((string)ViewData["val"], "<em class =\"search\">" + (string)ViewData["val"] + "</em>"));
+                    }
+                    else
+                    {
+                        @Html.Raw(item.tForumMessages_messages);
+                    }
                 </p>
             </div>
         </a>
